Adding feature engineering section to the kernel

--- a/Titanic/Trail2/TitanicTrail2.ipynb
+++ b/Titanic/Trail2/TitanicTrail2.ipynb
@@ -1767,6 +1767,546 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Engineering\n",
+    "\n",
+    "# name length\n",
+    "train['name_length'] = [len(i) for i in train.Name]\n",
+    "test['name_length'] = [len(i) for i in test.Name]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def name_length_group(size):\n",
+    "    a = ''\n",
+    "    if (size <=20):\n",
+    "        a = 'short'\n",
+    "    elif (size <=35):\n",
+    "        a = 'medium'\n",
+    "    elif (size <=45):\n",
+    "        a = 'good'\n",
+    "    else:\n",
+    "        a = 'long'\n",
+    "    return a\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['nLength_group'] = train['name_length'].map(name_length_group)\n",
+    "test['nLength_group'] = test['name_length'].map(name_length_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## get the title from the name\n",
+    "train[\"title\"] = [i.split('.')[0] for i in train.Name]\n",
+    "train[\"title\"] = [i.split(',')[1] for i in train.title]\n",
+    "test[\"title\"] = [i.split('.')[0] for i in test.Name]\n",
+    "test[\"title\"]= [i.split(',')[1] for i in test.title]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " Mr              517\n",
+       " Miss            182\n",
+       " Mrs             125\n",
+       " Master           40\n",
+       " Dr                7\n",
+       " Rev               6\n",
+       " Major             2\n",
+       " Mlle              2\n",
+       " Col               2\n",
+       " Mme               1\n",
+       " Lady              1\n",
+       " Jonkheer          1\n",
+       " the Countess      1\n",
+       " Sir               1\n",
+       " Don               1\n",
+       " Capt              1\n",
+       " Ms                1\n",
+       "Name: title, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.title.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rare_title = ['the Countess','Capt','Lady','Sir','Jonkheer','Don','Major','Col']\n",
+    "#train.Name = ['rare' for i in train.Name for j in rare_title if i == j]\n",
+    "train[\"title\"] = [i.replace('Ms', 'Miss') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Mlle', 'Miss') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Mme', 'Mrs') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Dr', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Col', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Major', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Don', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Jonkheer', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Sir', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Lady', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Capt', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('the Countess', 'rare') for i in train.title]\n",
+    "train[\"title\"] = [i.replace('Rev', 'rare') for i in train.title]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rare_title = ['the Countess','Capt','Lady','Sir','Jonkheer','Don','Major','Col']\n",
+    "#train.Name = ['rare' for i in train.Name for j in rare_title if i == j]\n",
+    "test['title'] = [i.replace('Ms', 'Miss') for i in test.title]\n",
+    "test['title'] = [i.replace('Dr', 'rare') for i in test.title]\n",
+    "test['title'] = [i.replace('Col', 'rare') for i in test.title]\n",
+    "test['title'] = [i.replace('Dona', 'rare') for i in test.title]\n",
+    "test['title'] = [i.replace('Rev', 'rare') for i in test.title]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[\"has_cabin\"] = [0 if i == 'N'else 1 for i in train.Cabin]\n",
+    "test[\"has_cabin\"] = [0 if i == 'N'else 1 for i in test.Cabin]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    687\n",
+       "1    204\n",
+       "Name: has_cabin, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.has_cabin.value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'N', 'T']\n",
+      "*********************************************\n",
+      "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'N']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (sorted(train.Cabin.unique()))\n",
+    "print (''.center(45,'*'))\n",
+    "print(sorted(test.Cabin.unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## We are going to create a new feature \"age\" from the Age feature. \n",
+    "train['child'] = [1 if i<16 else 0 for i in train.Age]\n",
+    "test['child'] = [1 if i<16 else 0 for i in test.Age]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    808\n",
+       "1     83\n",
+       "Name: child, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.child.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Family_size seems like a good feature to create\n",
+    "train['family_size'] = train.SibSp + train.Parch+1\n",
+    "test['family_size'] = test.SibSp + test.Parch+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def family_group(size):\n",
+    "    a = ''\n",
+    "    if (size <= 1):\n",
+    "        a = 'loner'\n",
+    "    elif (size <= 4):\n",
+    "        a = 'small'\n",
+    "    else:\n",
+    "        a = 'large'\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['family_group'] = train['family_size'].map(family_group)\n",
+    "test['family_group'] = test['family_size'].map(family_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['is_alone'] = [1 if i<2 else 0 for i in train.family_size]\n",
+    "test['is_alone'] = [1 if i<2 else 0 for i in test.family_size]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CA. 2343        7\n",
+       "1601            7\n",
+       "347082          7\n",
+       "CA 2144         6\n",
+       "3101295         6\n",
+       "347088          6\n",
+       "S.O.C. 14879    5\n",
+       "382652          5\n",
+       "W./C. 6608      4\n",
+       "113760          4\n",
+       "Name: Ticket, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Ticket.value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>name_length</th>\n",
+       "      <th>nLength_group</th>\n",
+       "      <th>title</th>\n",
+       "      <th>has_cabin</th>\n",
+       "      <th>child</th>\n",
+       "      <th>family_size</th>\n",
+       "      <th>family_group</th>\n",
+       "      <th>is_alone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>N</td>\n",
+       "      <td>S</td>\n",
+       "      <td>23</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>small</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>51</td>\n",
+       "      <td>long</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>small</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>N</td>\n",
+       "      <td>S</td>\n",
+       "      <td>22</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>loner</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>S</td>\n",
+       "      <td>44</td>\n",
+       "      <td>good</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>small</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>N</td>\n",
+       "      <td>S</td>\n",
+       "      <td>24</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>loner</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived  Pclass                                               Name  Sex  \\\n",
+       "0         0       3                            Braund, Mr. Owen Harris    1   \n",
+       "1         1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...    0   \n",
+       "2         1       3                             Heikkinen, Miss. Laina    0   \n",
+       "3         1       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)    0   \n",
+       "4         0       3                           Allen, Mr. William Henry    1   \n",
+       "\n",
+       "    Age  SibSp  Parch            Ticket     Fare Cabin Embarked  name_length  \\\n",
+       "0  22.0      1      0         A/5 21171   7.2500     N        S           23   \n",
+       "1  38.0      1      0          PC 17599  71.2833     C        C           51   \n",
+       "2  26.0      0      0  STON/O2. 3101282   7.9250     N        S           22   \n",
+       "3  35.0      1      0            113803  53.1000     C        S           44   \n",
+       "4  35.0      0      0            373450   8.0500     N        S           24   \n",
+       "\n",
+       "  nLength_group  title  has_cabin  child  family_size family_group  is_alone  \n",
+       "0        medium     Mr          0      0            2        small         0  \n",
+       "1          long    Mrs          1      0            2        small         0  \n",
+       "2        medium   Miss          0      0            1        loner         1  \n",
+       "3          good    Mrs          1      0            2        small         0  \n",
+       "4        medium     Mr          0      0            1        loner         1  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['calculated_fare'] = train.Fare/train.family_size\n",
+    "test['calculated_fare'] = test.Fare/test.family_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.9163751119176"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.calculated_fare.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    13.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.calculated_fare.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
